# BackBone-AI

./: .env.example  .gitignore  EXECUTION_READINESS.md  GUIDE.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  create_database.py  init_database.py  install.bat  install.sh  pyproject.toml  pytest.ini  requirements-security.txt  requirements.txt  run_example.py  setup.py  test_execution_readiness.py  test_improved_generation.py  test_llm_providers.py  test_static_analysis.py  verify_system.py
app/: cli.py
app/agents/: __init__.py  architect_agent.py  base_agent.py  code_generator_agent.py  schema_validator_agent.py  validator_agent.py
app/api/: main.py  middleware.py
app/api/routes/: __init__.py  generate.py
app/core/: config.py  health.py  llm_factory.py  logger.py  metrics.py  rate_limit.py  security.py  tracing.py  validation.py
app/prompts/: architect_prompts.py  generator_prompts.py  validator_prompts.py
app/schemas/: agent_output_schema.py  architect_schema.py  input_schema.py  validation_schema.py  validator_schema.py
app/tools/: json_tools.py  relationship_tools.py  validation_tools.py
app/workflows/: __init__.py  generation_workflow.py  state.py
docs/: LLM_PROVIDERS.md  MONITORING.md  PRODUCTION_READINESS.md  SECURITY.md  architecture.md  getting-started.md
examples/: README.md  blog_schema.json  complex_schema.json  ecommerce_schema.json  simple_schema.json  validate_schema.py
templates/: __init__.py.jinja2  database.py.jinja2  mixins.py.jinja2  model.py.jinja2  model_improved.py.jinja2
tests/: conftest.py
tests/fixtures/: sample_schemas.py
tests/test_agents/: test_architect_agent.py  test_code_generator_agent.py  test_schema_validator_agent.py  test_validator_agent.py
tests/test_tools/: test_json_tools.py  test_relationship_tools.py
tests/test_workflows/: __init__.py  test_generation_workflow.py
